[package]
name = "ai-functions"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"
unused = "allow" # _DEV

[dependencies]
async-openai = "0.20.0"
derive_more = { version = "0.99.17", features = ["from"] }
rpc-router = "=0.1.3" # Fix dependencies for early libs
schemars = "0.8.16"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
serde_with = { version = "3.7.0", features = ["macros"] }
tokio = { version = "1.37.0", features = ["full"] }
